# NetHack

./: .gitmodules  .travis.yml  meson.build
include/: global.h  ntconf.h  portable.h
src/: dungeon.c  files.c  sp_lev.c
sys/msdos/: ci.sh  msdos.cross
sys/winnt/: install.sh  nhico.uu  nttty.c  windmain.c  winnt.cross
util/: dgn_comp.y  lev_main.c  makedefs.c
win/share/: tilemap.c
